[tool.poetry]
name = "pysafe-config"
version = "0.0.0"
description = "Type safe environment variables"
authors = ["Lancasterg <lancaster0180@gmail.com>"]
readme = "README.md"
packages = [{include = "pysafe_config"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
black = "^25.9.0"
mypy = "^1.18.2"


[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
pytest-cov = "^7.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocstrings = {extras = ["python"], version = "^0.30.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
